@@ -39,6 +39,7 @@ FLIBS = @FLIBS@
 ## needed for some earlier Solaris compilers
 FLIBS_IN_SO = @FLIBS_IN_SO@
 FPICFLAGS = @FPICFLAGS@
+FPIEFLAGS = @FPIEFLAGS@
 FC = @FC@
 GETWD = @GETWD@
 GZIP = --best
@@ -119,6 +120,7 @@ ALL_FFLAGS = $(R_XTRA_FFLAGS) $(MAIN_FFLAGS) $(FFLAGS)
 ## SHLIB_CFLAGS and SHLIB_FFLAGS are apparently currently unused
 ALL_CFLAGS_LO = $(R_XTRA_CFLAGS) $(R_OPENMP_CFLAGS) $(CPICFLAGS) $(SHLIB_CFLAGS) $(CFLAGS)
 ALL_FFLAGS_LO = $(R_XTRA_FFLAGS) $(FPICFLAGS) $(SHLIB_FFLAGS) $(FFLAGS)
+ALL_FFLAGS_PIE = $(R_XTRA_FFLAGS) $(FPIEFLAGS) $(SHLIB_FFLAGS) $(FFLAGS)
 
 .SUFFIXES:
 .SUFFIXES: .c .f .m .d .o
